--- a/dev/src/css/styles.css
+++ b/dev/src/css/styles.css
@@ -71,6 +71,11 @@ header {
   height: 120px;
   margin-left: 24px;
   filter: drop-shadow(0px 0px 8px rgba(255, 255, 255, 0.8));
+  transition: 777ms ease-in-out;
+}
+
+.loaded-img {
+  transform: rotatez(720deg);
 }
 
 #headerTitle {
